Fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,15 +19,24 @@
   }
 }
 
-body {
+html, body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.fullHeight {
+  height: 100vh
 }
 
 .topbar {
@@ -48,10 +57,6 @@ body {
 .leftBorder {
   border-left-color: #363636;
   border-left-width: thin;
-}
-
-.fillHeight {
-  flex-grow: 1;
 }
 
 .fillWidth {
